<resources>
    <string name="app_name">DamGame</string>
    <string name="question">Pregunta</string>
    <string name="select_start">Selecciona las estrellas que quieres iluminar</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="crear_ambiente">Crear ambiente</string>
    <string name="quitar_ambiente">Quitar ambiente</string>
    <string name="feliz_navidad">Feliz Navidad 2º DAM!!!</string>
    <string name="vida">Vida</string>
    <string name="puntos">" puntos"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desierto">Desierto</string>
    <string name="hielo">Hielo</string>
    <string name="submarino">Submarino</string>
    <string name="ciudad">Ciudad</string>
    <string name="espacio">Espacio</string>
    <string name="selva">Selva</string>
    <string name="tema">Tema</string>
    <string name="volver">Volver</string>
    <!-- TEMAS -->
    <string name="TEMA_CIUDAD">100</string>
    <string name="TEMA_DESIERTO">101</string>
    <string name="TEMA_ESPACIO">102</string>
    <string name="TEMA_HIELO">103</string>
    <string name="TEMA_SELVA">104</string>
    <string name="TEMA_SUBMARINO">105</string>
    <string name="seleccione_tema">Seleccione un tema</string>
    <string name="temas">Temas</string>
    <string name="preguntas">Preguntas</string>
    <string name="seleccione_pregunta">Seleccione una question</string>
    <string name="ambiente">Ambiente</string>
    <string name="ambientes">Ambientes</string>
    <string name="seleccione_ambiente">Seleccione un ambiente</string>
    <string name="materias">Materias</string>
    <string name="seleccione_materia">Seleccione una etapa y materia</string>
    <!-- ASIGNATURAS -->
    <string name="eso1_biologia_geologia">ESO 1º/Biología y Geología</string>
    <string name="comenzar">Comenzar</string>
    <string name="vidas">Vidas</string>
    <string name="Puntos">Puntos</string>
    <string name="respuestas">Respuestas</string>
    <string name="cero">0</string>
    <string name="dificultad">Dificultad</string>
    <string name="seleccion_dificultad">Seleccione la dificultad</string>
    <string name="nombre_usuario">Nombre de usuario:</string>
    <string name="puntuacion">Puntuación:</string>
    <string name="duracion">Duración de la partida:</string>
    <string name="aceptar">Aceptar</string>
    <string name="divisor">/</string>
    <string name="ranking">Ranking</string>
    <string name="creditos">Creditos</string>
    <string name="nombre_usuario_login">Nombre de usuario</string>
    <string name="email">Email</string>
    <string name="contrasesña">Contraseña</string>
    <string name="confirmar_contraseñas">Repita la contraseña</string>
    <string name="mostrar_contraseña">Mostrar Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrar">Registrar</string>
    <string name="volver_inicio">Volver</string>
    <!--Errores login-->
    <string name="error_campo_vacio">Este campo es necesario para el inicio de sesion</string>
    <string name="usuario_no_encontrado">Ese usuario no existe</string>
    <string name="usuario_existente">Ese usuario ya existe</string>
    <string name="usuario_registrado">Usuario registrado con exito</string>
    <string name="usuario_erroneo">El nombre de usuario o la contraseña son erroneas</string>
    <string name="contraseñas_diferentes">Las contraseñas son diferentes</string>
    <string name="enviar_correo">Enviar estadisticas al correo</string>
</resources>