<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyLoginMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyLogin"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/nombre_usuario_login"
            android:inputType="textPersonName"
            android:text="SinAPIREST" />

        <EditText
            android:id="@+id/etpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/contrasesña"
            android:inputType="textPassword"
            android:text="sinAPIREST"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="end"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbMostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_contraseña" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/iniciar_sesion" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/registrarse" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>